--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -1069,11 +1069,20 @@ Including 2$\clubsuit$ which is a weak 2 in diamonds or a strong hand.
 
 \subsubsection{Shortage preempts}
 
-\ldots
+If the suit bid is short then double shows an overcall in that suit or any
+large hand.  Other suits are natural but reasonably robust and 2NT shows stops
+in all the other suits.
+
+If the suit bid is one of the three promised then double is takeout or any large hand.
+Suit bids are natural but reasonably robust. 2NT shows a balanced hand with at 
+least a stop in the suit bid and some cards in the others.
 
 \subsubsection{Other multi-way preempts}
 
-\ldots
+Multi-way preempts will deny the suit bid and so double shows an overcall in
+that suit. Big hands either pass then act or start with a double.
+
+Other overcalls are natural.
 
 \subsubsection{Lightner Doubles}
 \label{sec:def:lightner}
