--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -85,21 +85,51 @@ than seven boards in a round, strike out the differences based on position and
 vulnerability, the vulnerable meanings apply at all positions and
 vulnerabilities.
 
-\vspace{1em}
+\paragraph{1$\clubsuit$}
 
-\begin{tabular}{ll}
-1$\clubsuit$  & 12--15 balanced or 10--15 unbalanced, no five-card major and \\
-	 &at most one four-card major. \orange{11C11}\\
-1$\diamondsuit$  & 16+; excludes balanced hands 24+ and game-forcing \\
-	&two-suited hands. \orange{11C12}\\
-1$\heartsuit$  & 10--15 unbalanced, with 4+ spades and additional constraints:\\
-	 & first or second seat non-vulnerable, possible canape with  \\
-	 & hearts, but 5+ spades if not holding 4+ hearts. \orange{11C14} \\
-	 & Other positions, or vulnerable, 5+ spades and 0--3 hearts.\\
-1$\spadesuit$  & 10--15 unbalanced, 5+ hearts, and 0--3 spades. \orange{11C14}\\
-1NT & 9--11 balanced in first or second non-vulnerable \orange{11F3}; \\
-	 & otherwise 10--15 unbalanced with 4+ in both majors. \orange{11F5}\\
-\end{tabular}
+One of the following \orange{11C11}:
+
+\begin{itemize}
+\item 12--15 balanced (4333, 4432, 5332). May include some semi-balanced hands esp. 5422.
+\item 10--15, not balanced, no 5-card major or at most one 4-card major
+\end{itemize}
+
+\paragraph{1$\diamondsuit$}
+
+16+, not game forcing if balanced or a two-suiter \orange{11C12}. If balanced or semi-balanced then 16--23. If a two suiter (5422 or longer) or three suiter (4441 / 5440) then 16--21. If a single suiter (6332 or longer) then 16+.
+
+\paragraph{1$\heartsuit$}
+
+Varies depending upon position and vulnerability, but always 10--15 points, not
+balanced and promises 4 spades \orange{11C14}.
+
+First or second seat non-vulnerable (events with 7+ boards per round only):
+\begin{itemize}
+\item 4+ spades, may be longer hearts but will always have 5 spades or 4 hearts
+\end{itemize}
+
+All other positions and vulnerabilities:
+\begin{itemize}
+\item 5+ spades, 0-3 hearts
+\end{itemize}
+
+\paragraph{1$\spadesuit$}
+
+10--15 points, not balanced. 5+ hearts, 0-3 spades \orange{11C14}
+
+\paragraph{1NT}
+
+Varies depending upon position and vulnerability.
+
+First or second seat non-vulnerable (events with 7+ boards per round only):
+\begin{itemize}
+\item 9--11 balanced \orange{11F3}.
+\end{itemize}
+
+All other positions and vulnerabilities:
+\begin{itemize}
+\item 10--15 points, not balanced 4+ hearts, 4+ spades \orange{11F5}.
+\end{itemize}
 
 \newpage 
 
@@ -108,38 +138,79 @@ vulnerabilities.
 
 Responses in Section \ref{sec:resp:2level}.
 
-\vspace{1em}
+\paragraph{2$\clubsuit$}
+One of the following \orange{11G10}:
+\begin{itemize}
+\item Weak (5-9) with $\diamondsuit$ (usually 6 cards)
+\item Weak (5-9) with $\heartsuit$ \& $\spadesuit$, 4--4 or better (usually 5--4)
+\item Game forcing (3 losers) with $\heartsuit$ \& $\spadesuit$, 4--4 or better (usually 5--4)
+\end{itemize}
 
-\begin{tabular}{ll}
-2$\clubsuit$  & weak with $\diamondsuit$, single suited \\
-		& OR weak with $\heartsuit$\&$\spadesuit$, 4--4 or better \\
-		& OR GF with $\heartsuit$\&$\spadesuit$. \orange{11G10}\\
-2$\diamondsuit$  & weak with $\heartsuit$, single suited \\
-	& OR weak with $\spadesuit$\&$\clubsuit$, 5+/4+ or better \\
-	& OR GF with $\spadesuit$\&$\clubsuit$. \orange{11G10}\\
-2$\heartsuit$  & weak with $\spadesuit$, single suited \\
-		& OR weak with $\clubsuit$\&$\diamondsuit$, 4+/4+ \\
-		& OR GF with $\clubsuit$\&$\diamondsuit$. \orange{11G10}\\
-2$\spadesuit$  & weak with $\heartsuit$ and a minor \\
-		& OR GF with $\heartsuit$ and a minor. 4+/4+. \orange{11G10}\\
-2NT & weak with $\diamondsuit$\&$\spadesuit$, 4+/4+, \\
-		& OR 24+ balanced \\
-		& OR GF with $\diamondsuit$\&$\spadesuit$. \orange{11H8} \\
-\end{tabular}
+\paragraph{2$\diamondsuit$}
+One of the following \orange{11G10}:
+\begin{itemize}
+\item Weak (5-9) with $\heartsuit$ (usually 6 cards)
+\item Weak (5-9) with $\spadesuit$ \& $\clubsuit$, 5--4 or better 
+\item Game forcing (3 losers) with $\spadesuit$ \& $\clubsuit$, 5--4 or better 
+\end{itemize}
+
+\paragraph{2$\heartsuit$}
+One of the following \orange{11G10}:
+\begin{itemize}
+\item Weak (5-9) with $\spadesuit$ (usually 6 cards)
+\item Weak (5-9) with $\clubsuit$ \& $\diamondsuit$, 4--4 or better (usually 5--4)
+\item Game forcing (3 losers) with $\clubsuit$ \& $\diamondsuit$, 4--4 or better (usually 5--4)
+\end{itemize}
+
+\paragraph{2$\spadesuit$}
+One of the following \orange{11G10}:
+\begin{itemize}
+\item Weak (5-9) with $\heartsuit$ \& one of the minors, 4--4 or better (usually 5--4)
+\item Game forcing (3 losers) with $\heartsuit$ \& one of the minors, 4--4 or better (usually 5--4)
+\end{itemize}
+
+\paragraph{2NT}
+One of the following \orange{11H8}:
+\begin{itemize}
+\item Weak (5-9) with $\spadesuit$ \& $\diamondsuit$, 4--4 or better (usually 5--4)
+\item Game forcing (3 losers) with $\heartsuit$ \& $\diamondsuit$, 4--4 or better (usually 5--4)
+\item 24+ (Game forcing) balanced hands
+\end{itemize}
 
 \subsubsection{Higher openings}
 \label{sec:open:higher}
 
 Responses in Section \ref{sec:resp:higher}.
 
-\vspace{1em}
+\paragraph{3 level}
 
-\begin{tabular}{ll}
-3-level & natural in suits. \\
-3NT & gambling. \orange{11K3} \\
-Higher-level openings & natural. \\
-4NT & specific ace-asking. \orange{11L1} \\
-\end{tabular}
+Three level bids are natual, weak, preempts. Typically seven cards they may
+be occasionally a good six (particularly at favourable and in clubs) or a bad eight.
+
+\paragraph{Higher-level openings}
+
+Also natural, show a more distributional hand with a longer suit. Usually eight
+cards at the four level.
+
+\paragraph{3NT}
+
+Gambling 3NT~\orange{11K3}. 
+
+Shows a solid seven or eight card suit an nothing outside better than a queen.
+Solid in this case is defined as 60\% likely to run given all distributions of
+cards in the other hands. The following suits are all considered to be solid:
+
+\begin{itemize}
+\item AKQJxxx
+\item AKQxxxx
+\item AKxxxxxx
+\end{itemize}
+
+\paragraph{4NT}
+
+Asks for specific aces~\orange{11L1}.
+
+Will be bid with a hand missing at most two aces, or with a void. It must be happy playing at the six level opposite some responses and the seven level opposite some others.
 
 \newpage
 
