--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -23,7 +23,7 @@
 
 \begin{document}
 
-\newcommand{ \orange}[1]{[OB #1]}
+\newcommand{\orange}[1]{[OB #1]}
 \newcommand{\xref}[1]{[\ref{#1}]}
 
 \maketitle
@@ -173,7 +173,7 @@ One of the following \orange{11G10}:
 One of the following \orange{11H8}:
 \begin{itemize}
 \item Weak (5-9) with $\spadesuit$ \& $\diamondsuit$, 4--4 or better (usually 5--4)
-\item Game forcing (3 losers) with $\heartsuit$ \& $\diamondsuit$, 4--4 or better (usually 5--4)
+\item Game forcing (3 losers) with $\spadesuit$ \& $\diamondsuit$, 4--4 or better (usually 5--4)
 \item 24+ (Game forcing) balanced hands
 \end{itemize}
 
