--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -263,13 +263,24 @@ Will be bid with a hand missing at most two aces, or with a void. It must be hap
 		\begin{itemize}
       \item 1NT rebid = 16--19 balanced; see ``Continuations after 1NT" \xref{sec:resp:1n}.
       \item Simple suit rebids are suction-style, showing either the suit above
-         (single-suited) or the other two ($\clubsuit$$\rightarrow$ $\diamondsuit$ or majors; $\diamondsuit$$\rightarrow$ $\heartsuit$ or ($\spadesuit$\&minor); $\heartsuit$$\rightarrow$
-         $\spadesuit$ or minors; $\spadesuit$$\rightarrow$$\clubsuit$ or ($\heartsuit$\&minor). Could be 3-suited, short in the suit
-         above. These are shown (2$\clubsuit$-2$\diamondsuit$-3$\clubsuit$: short $\diamondsuit$. 2$\diamondsuit$-2$\heartsuit$-2$\spadesuit$: short $\heartsuit$. 2$\heartsuit$-2$\spadesuit$-3$\heartsuit$:
-         short $\spadesuit$. 2$\spadesuit$-3$\clubsuit$-3$\spadesuit$: short $\clubsuit$.).
+         (single-suited) or the other two, 16--22 HCP.
+			\begin{itemize}
+			\item $\clubsuit$ = diamonds or the majors
+			\item $\diamondsuit$ = hearts or spades and a minor
+			\item $\heartsuit$ = spades or the minors
+			\item $\spadesuit$ = clubs or hearts and a minor
+			\end{itemize}
+		\item Could be 3-suited, short in the suit above. These are shown: 
+			\begin{itemize}
+         \item 2$\clubsuit$-2$\diamondsuit$-3$\clubsuit$: short diamonds.
+			\item 2$\diamondsuit$-2$\heartsuit$-2$\spadesuit$: short hearts. 
+			\item 2$\heartsuit$-2$\spadesuit$-3$\heartsuit$: short spades.
+         \item 2$\spadesuit$-3$\clubsuit$-3$\spadesuit$: short clubs.
+			\end{itemize}
+		\item Continuations:
 			\begin{itemize}
 			\item Responder will bid the next suit (relay). Opener then rebids NT with the
-				single-suited hand, or a suit with the two-suited option.
+				single-suited hand, or a suit with the two/three-suited option.
 			\item After GF+ suit agreement with a 3-suiter, 3N by opener shows no wish to make
 				a slam try. Bidding the short suit shows a void and bidding a long suit shows
 				a significantly better suit.
@@ -293,8 +304,6 @@ Will be bid with a hand missing at most two aces, or with a void. It must be hap
 		\end{itemize}
 	\end{itemize}
 
-\newpage
-
 \item 1$\heartsuit$ (if denying $\heartsuit$):
 	\begin{itemize}
    \item 1$\spadesuit$/2$\spadesuit$/3$\spadesuit$/4$\spadesuit$ = to play/limit raises/to play.
@@ -312,6 +321,8 @@ Will be bid with a hand missing at most two aces, or with a void. It must be hap
 	\item 4$\heartsuit$ = to play
 	\end{itemize}
 
+\newpage
+
 \item 1$\spadesuit$:
 	\begin{itemize}
    \item 2$\heartsuit$/3$\heartsuit$/4$\heartsuit$ = to play/limit raise/to play.
@@ -327,8 +338,6 @@ Will be bid with a hand missing at most two aces, or with a void. It must be hap
    \item 3$\spadesuit$ = GF raise, two of AKQ. (see ``Three-way encryption" \xref{sec:enc:3way})
    \item 4$\clubsuit$/$\diamondsuit$/$\spadesuit$ = splinter agreeing hearts
 	\end{itemize}
-
-\newpage
 
 \item 1$\heartsuit$ if not denying $\heartsuit$:
 	\begin{itemize}
@@ -369,8 +378,6 @@ Will be bid with a hand missing at most two aces, or with a void. It must be hap
    \item 3$\clubsuit$/$\diamondsuit$: strong, good suit.
    \item 3$\heartsuit$/$\spadesuit$: good raise, with exactly one of AK \xref{sec:enc:2way}.
 	\end{itemize}
-
-\newpage
 
 \subsubsection{2 level}
 \label{sec:resp:2level}
@@ -881,9 +888,14 @@ If you find duplication in kings/singletons subtract one CP and sign off at the
 appropriate level. If your partner signs off and you have 2 as-yet unshown CPs,
 raise one level.
 
-If the hand bidding Swiss has shown a GF, add 2 to all numbers. If it has shown
-a weak hand (opening at the 2 level or giving a 0--7 response to 1$\diamondsuit$), subtract 2
-from all numbers.
+If the hand bidding Swiss has shown a GF (opening a strong 2 level option,
+1$\diamondsuit$ and a jump rebid, or 1$\diamondsuit$ and a 2NT rebid), add 2 to
+all numbers. If it has shown a weak hand (opening a weak 2 or 3 level option or
+giving a 0--7 response to 1$\diamondsuit$), subtract 2 from all numbers.
+
+There is a small problem if you have 7 CPs and are agreeing hearts, since in
+that case, there is no available next step. In this case you may wish to show
+6 CPs and ignore one point of duplication.
 
 \newpage
 
