Correcting some minor details, including spelling/punctuation.

--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -55,7 +55,7 @@ elsewhere in this document will be given as \xref{sec:resp:2level}.
 
 The descriptions below of particular bids will generally be in terms of point
 ranges. These are not a hard and fast rule, however. We will try and make the
-bid which describes the hand best. This main mean small deviations of strength, 
+bid which describes the hand best. This may mean small deviations of strength, 
 particularly with extra shape. No-trump ranges are the least likely to vary and
 preemptive actions most likely.
 
@@ -63,14 +63,14 @@ Opening bids at the 1 level are 10--15. The lower limit is usually governed by
 the rule of 19 as much as the actual point count and some good 15 point hands
 may be upgraded to a 1$\diamondsuit$ opening. Losing trick count is also 
 useful for deciding when to upgrade. Upgraded hands will, obviously, meet the
-extended rule of 25 in all cases.
+extended rule of 25 in all cases. \orange{10B5}
 
 In order to determine whether a hand is game forcing (for example to open a
 distributional hand 1$\diamondsuit$ or at the two level) we generally
 rely on losing trick count. Three or fewer losing tricks is enough to be game
 forcing, occasionally 4 if there are also 9 clear cut tricks. This is just a
-guide, however, so might not strictly apply to all hands. The hands will,
-obviously, meet the extended rule of 25 in all cases.
+guide, however, so might not strictly apply to all hands. The hands will meet
+the extended rule of 25 in all cases.
 
 \newpage
 
@@ -82,7 +82,7 @@ obviously, meet the extended rule of 25 in all cases.
 
 Responses in Section \ref{sec:resp:1level}. When playing in an event with fewer
 than seven boards in a round, strike out the differences based on position and
-vulnerability, the vulnerable meanings apply at all positions and
+vulnerability; the vulnerable meanings apply at all positions and
 vulnerabilities.
 
 \paragraph{1$\clubsuit$}
@@ -90,8 +90,8 @@ vulnerabilities.
 One of the following \orange{11C11}:
 
 \begin{itemize}
-\item 12--15 balanced (4333, 4432, 5332). May include some semi-balanced hands esp. 5422.
-\item 10--15, not balanced, no 5-card major or at most one 4-card major
+\item 12--15 balanced (4333, 4432, 5332). May occasionally include some semi-balanced hands esp. 5422.
+\item 10--15, not balanced, no 5-card major and at most one 4-card major
 \end{itemize}
 
 \paragraph{1$\diamondsuit$}
@@ -151,7 +151,7 @@ One of the following \orange{11G10}:
 \begin{itemize}
 \item Weak (5-9) with $\heartsuit$ (usually 6 cards)
 \item Weak (5-9) with $\spadesuit$ \& $\clubsuit$, 5--4 or better 
-\item Game forcing (3 losers) with $\spadesuit$ \& $\clubsuit$, 5--4 or better 
+\item Game forcing (3 losers) with $\spadesuit$ \& $\clubsuit$, 4--4 or better  (usually 5--4)
 \end{itemize}
 
 \paragraph{2$\heartsuit$}
@@ -184,10 +184,10 @@ Responses in Section \ref{sec:resp:higher}.
 
 \paragraph{3 level}
 
-Three level bids are natual, weak, preempts. Typically seven cards they may
-be occasionally a good six (particularly at favourable and in clubs) or a bad eight.
+Three level bids are natural, weak, preempts. Typically seven cards, they may
+be occasionally a good six (particularly at favourable vulnerability and in clubs) or a bad eight.
 
-\paragraph{Higher-level openings}
+\paragraph{Higher-level suit openings}
 
 Also natural, show a more distributional hand with a longer suit. Usually eight
 cards at the four level.
@@ -196,7 +196,7 @@ cards at the four level.
 
 Gambling 3NT~\orange{11K3}. 
 
-Shows a solid seven or eight card suit an nothing outside better than a queen.
+Shows a solid seven or eight card suit and nothing outside better than a queen.
 Solid in this case is defined as 60\% likely to run given all distributions of
 cards in the other hands. The following suits are all considered to be solid:
 
@@ -232,10 +232,10 @@ Will be bid with a hand missing at most two aces, or with a void. It must be hap
 		\begin{itemize}
       \item 1$\spadesuit$ = any 10-11
       \item 1NT = 12--15 balanced; see ``Continuations after 1NT" \xref{sec:resp:1n}.
-      \item 2 major suit bids 12-15 unbal and promise exactly 4; either 4-4-4-1
+      \item major suit bids 12-15 unbal and promise exactly 4; either 4-4-4-1
             with singleton other major or has a longer minor (as there's no other
             hand shape that fits the opening and has exactly one 4-card major)
-      \item 2 minor suit bids deny a 4-card major and are 12-15 unbal.
+      \item minor suit bids deny a 4-card major and are 12-15 unbal.
 		\end{itemize}
    \item 1$\spadesuit$ = 15+ any, game-forcing.
 		\begin{itemize}
@@ -263,7 +263,7 @@ Will be bid with a hand missing at most two aces, or with a void. It must be hap
 		\begin{itemize}
       \item 1NT rebid = 16--19 balanced; see ``Continuations after 1NT" \xref{sec:resp:1n}.
       \item Simple suit rebids are suction-style, showing either the suit above
-         (single-suited) or the other two, 16--22 HCP.
+         (single-suited) or the other two, 16--21 HCP.
 			\begin{itemize}
 			\item $\clubsuit$ = diamonds or the majors
 			\item $\diamondsuit$ = hearts or spades and a minor
@@ -285,10 +285,10 @@ Will be bid with a hand missing at most two aces, or with a void. It must be hap
 				a slam try. Bidding the short suit shows a void and bidding a long suit shows
 				a significantly better suit.
 			\item After 1$\diamondsuit$-1$\spadesuit$ and showing suit(s) by opener, bidding 4$\clubsuit$/$\diamondsuit$
-				is swiss \xref{sec:swiss} agreeing openers most recently bid suit, bidding one of the other suits below 
+				is Swiss \xref{sec:swiss} agreeing opener's most recently bid suit, bidding one of the other suits below 
 				game is slam inviting asking opener to bid swiss for that suit. Other available suits are first-round cues.
 			\item After 1$\diamondsuit$-1$\heartsuit$ and showing suit(s) by opener, bidding 4$\clubsuit$/$\diamondsuit$
-				is swiss \xref{sec:swiss} agreeing openers most recently bid suit, bidding one of the other suits below 
+				is Swiss \xref{sec:swiss} agreeing opener's most recently bid suit, bidding one of the other suits below 
 				game is game inviting. Other available suits ask for a stop.
 			\end{itemize}
       \item Jump suit rebids are GF, single-suited.
@@ -336,7 +336,8 @@ Will be bid with a hand missing at most two aces, or with a void. It must be hap
 		\end{itemize}
    \item 3$\clubsuit$/3$\diamondsuit$ = fit jump.
    \item 3$\spadesuit$ = GF raise, two of AKQ. (see ``Three-way encryption" \xref{sec:enc:3way})
-   \item 4$\clubsuit$/$\diamondsuit$/$\spadesuit$ = splinter agreeing hearts
+   \item 4$\clubsuit$/$\diamondsuit$ = splinter agreeing hearts
+   \item 4$\spadesuit$ = to play
 	\end{itemize}
 
 \item 1$\heartsuit$ if not denying $\heartsuit$:
@@ -391,21 +392,27 @@ Will be bid with a hand missing at most two aces, or with a void. It must be hap
    \item 2$\heartsuit$/$\spadesuit$ = non-forcing; major-focused.
 		\begin{itemize}
 		\item Pass = minimum weak with both majors
-      \item 3$\heartsuit$ = maximum weak with better $\heartsuit$
-      \item 2/3$\spadesuit$ = maximum weak with better $\spadesuit$
-      \item 2NT = maximum weak both equal
-      \item 3$\diamondsuit$ = weak, diamonds.
-      \item 3$\clubsuit$ = GF opening
+ 	\item 3$\heartsuit$ = maximum weak with better $\heartsuit$
+ 	\item 2/3$\spadesuit$ = maximum weak with better $\spadesuit$
+ 	\item 2NT = maximum weak both equal
+ 	\item 3$\diamondsuit$ = weak, diamonds.
+ 	\item 3$\clubsuit$ = GF opening
 		\end{itemize}
-   \item 2NT = F1, how good are your diamonds?
+	\item 2NT = F1, how good are your diamonds?
 		\begin{itemize}
-      \item 3$\clubsuit$ = GF opening
-      \item 3$\diamondsuit$ = bad diamonds
-      \item 3$\heartsuit$ = 2-suited
-      \item 3$\spadesuit$ = decent diamonds
-      \item 3NT = top-of-range diamonds
+		\item 3$\clubsuit$ = GF opening
+ 		\item 3$\diamondsuit$ = dire, single-suited
+		\item 3$\heartsuit$ = 2-suited
+		\item 3$\spadesuit$ = decent diamonds
+		\item 3NT = top-of-range diamonds
 		\end{itemize}
 	\item 3$\clubsuit$ = GF enquiry
+		\begin{itemize}
+		\item 3$\diamondsuit$ = weak, diamonds
+		\item 3$\heartsuit$ = weak, majors, better hearts
+		\item 3$\spadesuit$ = weak, majors, better spades
+		\end{itemize}
+
 	\end{itemize}
 
 \newpage
@@ -456,7 +463,7 @@ Will be bid with a hand missing at most two aces, or with a void. It must be hap
    \item 2NT = F1, how good are your spades?
 		\begin{itemize}
       \item 3$\clubsuit$ = two-suited.
-      \item 3$\diamondsuit$ = dire spades.
+      \item 3$\diamondsuit$ = dire, single-suited.
       \item 3$\heartsuit$ = GF opening.
       \item 3$\spadesuit$ = decent, single-suited.
       \item 3NT = top-of-range spades.
@@ -490,8 +497,8 @@ Will be bid with a hand missing at most two aces, or with a void. It must be hap
       \item Opener breaks transfer if GF two-suiter; suit has been set so bid controls.
       \item A 3NT rebid shows 24+ balanced
 			\begin{itemize}
-         \item 3$\clubsuit$/$\diamondsuit$ = 2 under transfers to $\heartsuit$/$\spadesuit$
-         \item 3$\heartsuit$/$\spadesuit$ = Swiss for no trumps \xref{sec:swiss}
+         \item 4$\clubsuit$/$\diamondsuit$ = 2 under transfers to $\heartsuit$/$\spadesuit$
+         \item 4$\heartsuit$/$\spadesuit$ = Swiss for no trumps \xref{sec:swiss}
          \item 4N = Quantitative
          \item 5N = Quantitative (for 6 or 7)
 			\end{itemize}
@@ -511,7 +518,7 @@ Will be bid with a hand missing at most two aces, or with a void. It must be hap
 		\begin{itemize}
 		\item 4$\heartsuit$/$\spadesuit$ = singleton in that suit
 		\item 4N = no singletons
-		\item 5$\clubsuit$/$\diamondsuit$ = singleton in the other suit
+		\item 5$\clubsuit$/$\diamondsuit$ = singleton in the other minor
 		\end{itemize}
 	\end{itemize}
 
@@ -645,7 +652,7 @@ We play a modified form of suction as the escape after 1NT-X.
 		\item 2$\diamondsuit$ with $\diamondsuit$\&$\heartsuit$
 		\end{itemize}
 	\end{itemize}
-\item 2$\clubsuit$ puppets 2$\diamondsuit$, weak with diamonds or the majors
+\item 2$\clubsuit$ forces 2$\diamondsuit$, weak with diamonds or the majors
 	\begin{itemize}
 	\item Pass with 5 clubs
 	\item 2$\diamondsuit$ with all other hands
@@ -667,7 +674,7 @@ We play a modified form of suction as the escape after 1NT-X.
 \end{itemize}
 
 This defence is played a level higher in the rare case of 2NT being doubled for
-penalties and applies in all cases that a natural notrump bid is doubled for
+penalties and applies in all cases that a natural notrump bid below game is doubled for
 penalties.
 
 \subsubsection{After direct overcalls of 1NT}
@@ -818,10 +825,10 @@ for the four aces and has the following responses:
 \subsection{Exclusion Blackwood}
 \label{sec:exclusion}
 
-Unwarrented bids of an outside suit at the 5 level are Exclusion Blackwood.
+Unwarranted bids of an outside suit at the 5 level are Exclusion Blackwood.
 Responses are as whichever form of Blackwood would apply, but ignoring the ace
 in the suit bid. The next available suit shows 0 outside aces / keycards and
-bids procede from there.
+bids proceed from there.
 
 \subsection{King you have or king you don't}
 \label{sec:kyhokyd}
@@ -845,7 +852,7 @@ control showing cue agreeing the most recently shown suit.
 \label{sec:swiss}
 
 4$\clubsuit$/4$\diamondsuit$, once a game-force is established and suit agreed, are slam tries, based
-on control points
+on control points.
 
 Control points are 2 for an ace, 1 for a king/singleton, and 1 for the queen of
 trumps.  There are 13 available from honours; it is possible to substitute
@@ -921,7 +928,7 @@ After these ``Continuations after 1NT''~\xref{sec:resp:1n} apply.
 
 Jump overcalls are weak, showing a 6 card suit and between 4HCP (favourable)
 and enough to make a simple overcall. In protective they are intermediate
-(11-15, reasonable 6+ card suit). Also, after the sequence (Pass)-Pass-(1N).
+(11-15, reasonable 6+ card suit). This also applies after the sequence (Pass)-Pass-(1N).
 
 Jump cuebids are stopper-asking for 3NT \orange{11N17}; they promise a long
 running suit.  An overcall of 3NT promises a long running suit and a stopper.
@@ -1325,7 +1332,7 @@ After the initial lead we lead high from bad suits and low from good suits.
 We play two forms of signalling. On partner's lead we play reverse attitude
 (low encouraging, high discouraging), except if the initial lead was an odd
 card. In that case we play Prism signals in that suit (see below). We also play
-Prism signals when trumps are lead by either side, or if there is a suitable
+Prism signals when trumps are led by either side, or if there is a suitable
 obvious running suit in no trumps.
 
 Leads to ruffs and other obvious situations may be McKenny.
@@ -1335,7 +1342,7 @@ Leads to ruffs and other obvious situations may be McKenny.
 
 Discards are Italian style, so an odd card is encouraging in the suit discarded
 and an even card is McKenny. Thus, low even cards ask for the lower of the
-outside suits and a high even card asks for the higher of the two outside
+outside suits and high even cards ask for the higher of the two outside
 suits.
 
 \subsection{Prism}
