--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -392,11 +392,11 @@ Will be bid with a hand missing at most two aces, or with a void. It must be hap
    \item 2$\heartsuit$/$\spadesuit$ = non-forcing; major-focused.
 		\begin{itemize}
 		\item Pass = minimum weak with both majors
- 	\item 3$\heartsuit$ = maximum weak with better $\heartsuit$
- 	\item 2/3$\spadesuit$ = maximum weak with better $\spadesuit$
- 	\item 2NT = maximum weak both equal
- 	\item 3$\diamondsuit$ = weak, diamonds.
- 	\item 3$\clubsuit$ = GF opening
+		\item 3$\heartsuit$ = maximum weak with better $\heartsuit$
+		\item 2/3$\spadesuit$ = maximum weak with better $\spadesuit$
+		\item 2NT = maximum weak both equal
+		\item 3$\diamondsuit$ = weak, diamonds.
+		\item 3$\clubsuit$ = GF opening
 		\end{itemize}
 	\item 2NT = F1, how good are your diamonds?
 		\begin{itemize}
@@ -652,7 +652,7 @@ We play a modified form of suction as the escape after 1NT-X.
 		\item 2$\diamondsuit$ with $\diamondsuit$\&$\heartsuit$
 		\end{itemize}
 	\end{itemize}
-\item 2$\clubsuit$ forces 2$\diamondsuit$, weak with diamonds or the majors
+\item 2$\clubsuit$ puppets 2$\diamondsuit$, weak with diamonds or the majors
 	\begin{itemize}
 	\item Pass with 5 clubs
 	\item 2$\diamondsuit$ with all other hands
