updates from brighton #1

--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -259,6 +259,12 @@ Will be bid with a hand missing at most two aces, or with a void. It must be hap
 \item 1$\diamondsuit$:
 	\begin{itemize}
    \item 1$\heartsuit$ = 0--7, no 6-card suit.
+		\begin{itemize}
+		\item Suit bids are natural
+      \item 1NT rebid = 16--19 balanced; see ``Continuations after 1NT" \xref{sec:resp:1n}.
+      \item Jump suit rebids are GF, single-suited.
+      \item 2NT rebid = 20--23 balanced; see ``Continuations after 2NT" \xref{sec:resp:2n}.
+		\end{itemize}
    \item 1$\spadesuit$ = 8+, game-forcing.
 		\begin{itemize}
       \item 1NT rebid = 16--19 balanced; see ``Continuations after 1NT" \xref{sec:resp:1n}.
@@ -318,16 +324,20 @@ Will be bid with a hand missing at most two aces, or with a void. It must be hap
 		\end{itemize}
    \item 1NT = non-forcing, any negative without spades
    \item 2$\clubsuit$/$\diamondsuit$ = natural, forcing.
-   \item 2$\heartsuit$ = GF+ raise, neither or both of $\spadesuit$ AK.
+   \item 2$\heartsuit$ = good raise, neither or both of $\spadesuit$ AK.
+		\begin{itemize}
+		\item Opener bids long suit trials below the trump suit
+		\item Cues or Swiss~\xref{sec:swiss} above the trump suit
+		\end{itemize}
    \item 2$\spadesuit$/3$\spadesuit$/4$\spadesuit$ = to play/limit raise/to play.
-   \item 2NT = good raise, with exactly one of $\spadesuit$ AK \xref{sec:enc:2way}.
+   \item 2NT = good raise, with exactly one of $\spadesuit$ AK \xref{sec:encryption}.
 		\begin{itemize}
       \item Next bid shows 0/1 loser and the $\spadesuit$ K, or 2/3 losers and the SA.
          Rebidding $\spadesuit$ denies the other top honour.
 		\end{itemize}
    \item 3$\clubsuit$/3$\diamondsuit$ = fit jump.
-   \item 3$\heartsuit$ = GF raise, two of AKQ. (see ``Three-way encryption" \xref{sec:enc:3way})
-   \item 4$\clubsuit$/$\diamondsuit$/$\heartsuit$ = splinter agreeing spades
+   \item 3$\heartsuit$/4$\clubsuit$/$\diamondsuit$ = splinter agreeing spades
+	\item 4$\heartsuit$ = to play
 	\end{itemize}
 
 \newpage
@@ -337,15 +347,18 @@ Will be bid with a hand missing at most two aces, or with a void. It must be hap
    \item 1$\spadesuit$/2$\spadesuit$/3$\spadesuit$/4$\spadesuit$ = to play/limit raises/to play.
    \item 1NT = 1-round force.
    \item 2$\clubsuit$/$\diamondsuit$ = natural, forcing.
-   \item 2$\heartsuit$ = GF+ raise, neither or both of $\spadesuit$ AK.
-   \item 2NT = good raise, with exactly one of $\spadesuit$ AK \xref{sec:enc:2way}.
+   \item 2$\heartsuit$ = good raise, neither or both of $\spadesuit$ AK.
+		\begin{itemize}
+		\item Opener bids long suit trials below the trump suit
+		\item Cues or Swiss~\xref{sec:swiss} above the trump suit
+		\end{itemize}
+   \item 2NT = good raise, with exactly one of $\spadesuit$ AK \xref{sec:encryption}.
 		\begin{itemize}
       \item Next bid shows 0/1 loser and the $\spadesuit$ K, or 2/3 losers and the SA.
          Rebidding $\spadesuit$ denies the other top honour.
 		\end{itemize}
    \item 3$\clubsuit$/3$\diamondsuit$ = fit jump.
-   \item 3$\heartsuit$ = GF raise, two of AKQ. (see ``Three-way encryption" \xref{sec:enc:3way})
-   \item 4$\clubsuit$/$\diamondsuit$ = splinter agreeing spades
+   \item 3$\heartsuit$/4$\clubsuit$/$\diamondsuit$ = splinter agreeing spades
 	\item 4$\heartsuit$ = to play
 	\end{itemize}
 
@@ -355,15 +368,18 @@ Will be bid with a hand missing at most two aces, or with a void. It must be hap
    \item 2$\heartsuit$/3$\heartsuit$/4$\heartsuit$ = to play/limit raise/to play.
    \item 1NT = 1-round force.
    \item 2$\clubsuit$/$\diamondsuit$ = natural, forcing.
-   \item 2$\spadesuit$ = GF+ raise, neither or both of $\heartsuit$ AK.
-   \item 2NT = good raise, with exactly one of $\heartsuit$ AK \xref{sec:enc:2way}.
+   \item 2$\spadesuit$ = good raise, neither or both of $\heartsuit$ AK.
+		\begin{itemize}
+		\item Opener bids long suit trials below the trump suit
+		\item Cues or Swiss~\xref{sec:swiss} above the trump suit
+		\end{itemize}
+   \item 2NT = good raise, with exactly one of $\heartsuit$ AK \xref{sec:encryption}.
 		\begin{itemize}
       \item Next bid shows 0/1 loser and the $\heartsuit$ K, or 2/3 losers and the HA.
          Rebidding $\heartsuit$ denies the other top honour.
 		\end{itemize}
    \item 3$\clubsuit$/3$\diamondsuit$ = fit jump.
-   \item 3$\spadesuit$ = GF raise, two of AKQ. (see ``Three-way encryption" \xref{sec:enc:3way})
-   \item 4$\clubsuit$/$\diamondsuit$ = splinter agreeing hearts
+   \item 3$\spadesuit$/4$\clubsuit$/$\diamondsuit$ = splinter agreeing hearts
    \item 4$\spadesuit$ = to play
 	\end{itemize}
 
@@ -381,7 +397,7 @@ Will be bid with a hand missing at most two aces, or with a void. It must be hap
       \item 3$\clubsuit$/$\diamondsuit$ weak, 3$\heartsuit$/$\spadesuit$ strong. 3$\clubsuit$/$\heartsuit$ better $\heartsuit$, 3$\diamondsuit$/$\spadesuit$ better $\spadesuit$.
 		\end{itemize}
    \item 3$\clubsuit$/$\diamondsuit$: strong, good suit.
-   \item 3$\heartsuit$/$\spadesuit$: good raise, with exactly one of AK \xref{sec:enc:2way}.
+   \item 3$\heartsuit$/$\spadesuit$: natural slam try.
 	\end{itemize}
 
 \newpage
@@ -515,6 +531,11 @@ Will be bid with a hand missing at most two aces, or with a void. It must be hap
 
 \subsubsection{Responses to higher opening bids}
 \label{sec:resp:higher}
+
+\item 3$\heartsuit$/$\spadesuit$:
+	\begin{itemize}
+	\item 4$\clubsuit$/$\diamondsuit$ = General Swiss~\xref{sec:swiss}
+	\end{itemize}
 
 \item 3NT:
 	\begin{itemize}
@@ -762,41 +783,15 @@ Once responder makes an encrypted raise, opener can either accept or decline
 the key.  To decline, simply rebid the suit (cheaply with a minimum; jump if
 maximum.  Use common sense.).
 
-If the key is accepted, subsequent bids are either two-way or three-way, depending on the key.
+If the key is accepted, subsequent bids are two-way, depending on the key.
 
-\subsection{Two-way encryption}
-\label{sec:enc:2way}
-
-This is far more common, as it requires responder and opener to have one each
-of the trump AK. Opener's rebid shows a useful side-suit if holding the trump
+Opener's rebid shows a useful side-suit if holding the trump
 K (0--1 losers) or a potential weakness if holding the trump A (2--3 losers).
 Responder can then either place the contract, cue-bid (either showing with the
 K or denying with the A), or use Blackwood.
 
 Blackwood here is Roman Keycard, but it's modified because there are only three keycards
 still of interest.
-
-\subsection{Three-way encryption}
-\label{sec:enc:3way}
-
-Requires AKQ of trumps between the two hands, and enough values for a
-game-forcing raise in responder's hand.  Rare!
-
-Opener's rebid shows a first-round control; the location of this control is
-encrypted.  We use the concept of the shift here: a shift of 1 indicates the
-next suit up ($\clubsuit$ from NT or $\spadesuit$, $\diamondsuit$ from $\clubsuit$, $\heartsuit$ from $\diamondsuit$, $\spadesuit$ from $\heartsuit$).  A shift of 2
-indicates the next suit after that, and a shift of 3 shows the final suit.
-Each cue therefore says nothing about control in the suit bid.
-
-The sum of the shift and the HCP of opener's honour is 5.  Opener, holding a $\diamondsuit$
-control, therefore bids $\clubsuit$ with the trump A, $\spadesuit$/NT with the trump K, and $\heartsuit$ with
-the trump Q.
-
-Of course, Blackwood goes funny here too.  You only need to show 0--3 keycards,
-and the location of the Q is known, so 0--1--2--3 would seem a sensible set
-of responses.
-
-\newpage
 
 \section{Slam conventions}
 \label{sec:slam}
@@ -868,7 +863,7 @@ outside singletons for kings, but care must be taken to avoid double-counting.
 11 CPs are necessary for a small slam; 13 for a grand.
 
 \begin{itemize}
-\item 4$\clubsuit$: 4 or 6 (exceptionally 8) control points)
+\item 4$\clubsuit$: 4 or 6 (exceptionally 8) control points
 	\begin{itemize}
    \item trump suit = 0--4 CPs
    \item 4$\diamondsuit$ = 5/6 CP, relay
@@ -882,7 +877,7 @@ outside singletons for kings, but care must be taken to avoid double-counting.
 	\end{itemize}
 
 \newpage
-\item 4$\diamondsuit$: 5 or 7 (exceptionally 9) control points)
+\item 4$\diamondsuit$: 5 or 7 (exceptionally 9) control points
 	\begin{itemize}
    \item trump suit = 0--3 CPs
    \item 4$\heartsuit$ = 4/5 CP, relay
@@ -913,6 +908,24 @@ There is a small problem if you have 7 CPs and are agreeing hearts, since in
 that case, there is no available next step. In this case you may wish to show
 6 CPs and ignore one point of duplication.
 
+\subsubsection{Interference}
+
+After interference direct over the start of General Swiss:
+
+\begin{itemize}
+	\item Pass = would sign-off in game (forcing)
+	\item X or XX = next-step
+	\item Suits = Accepting the slam try and checking for duplication as normal
+\end{itemize}
+
+After interference direct after a non-signoff response to Swiss:
+
+\begin{itemize}
+	\item Pass = would sign-off in game (forcing)
+	\item X or XX = a second-round control in that suit
+	\item Suits = a second-round control in that suit
+\end{itemize}
+
 \newpage
 
 \section{Competitive bidding}
@@ -926,7 +939,7 @@ Therefore, we have a fairly natural overcall style.
 
 Simple overcalls are constructive and natural 5 cards, starting at
 10HCP~\orange{11N2}. In response, if 1N is available, then 2N is a crypto
-raise~\xref{sec:enc:2way}. In all cases a responsive cue is a good raise and
+raise~\xref{sec:encryption}. In all cases a responsive cue is a good raise and
 direct raises are preemptive.
 
 Double is standard takeout (or a strong hand)~\orange{11N3}.
